--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.zz</groupId>
+    <groupId>org.zz.spring.guide</groupId>
     <artifactId>spring-guide</artifactId>
     <packaging>pom</packaging>
+
     <modules>
         <module>spring-demo1</module>
         <module>spring-annotation</module>
