--- a/pom.xml
+++ b/pom.xml
@@ -9,35 +9,23 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>spring-demo1</module>
-        <module>spring-annotation</module>
-        <module>spring-aop</module>
-        <module>spring-mvc</module>
+        <module>learn-spring-xml</module>
+        <module>learn-spring-aop</module>
+        <module>learn-spring-annotation</module>
     </modules>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <spring.version>6.1.5</spring.version>
+
+        <spring.version>6.1.10</spring.version>
         <junit.jupiter.api>5.10.2</junit.jupiter.api>
         <lombok.version>1.18.32</lombok.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-context</artifactId>
-                <version>${spring.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-webmvc</artifactId>
-                <version>${spring.version}</version>
-            </dependency>
-
             <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
@@ -52,6 +40,12 @@
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
                 <scope>provided</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>${spring.version}</version>
             </dependency>
 
         </dependencies>
